--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,26 @@
-# Use official Node.js image
+# Use the official Node.js image as a base
 FROM node:14
 
-# Create and change to the app directory
+# Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Install app dependencies
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
+
+# Install the dependencies
 RUN npm install
 
-# Bundle app source
+# Copy the rest of the application code to the working directory
 COPY . .
 
-# Build the app
+# Build the application
 RUN npm run build
 
-# Serve the app
+# Install a simple HTTP server to serve static files
 RUN npm install -g serve
-CMD ["serve", "-s", "build"]
+
+# Expose the port the application will run on
+EXPOSE 3000
+
+# Command to run the application
+CMD ["serve", "-s", "build", "-l", "3000"]
