--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# Stage 1: Build the application
-FROM node:14 AS BUILD_IMAGE
+# Use the official Node.js image
+FROM node:14
 
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
 
 # Install dependencies
@@ -13,20 +13,15 @@ RUN npm install
 # Copy the rest of the application source code
 COPY . .
 
-# Build the application (if applicable)
+# Build the React application
 RUN npm run build
 
-# Stage 2: Run the application
-FROM node:14-alpine
+# Use a minimal web server image to serve the built React app
+FROM nginx:alpine
+COPY --from=0 /app/build /usr/share/nginx/html
 
-# Set the working directory
-WORKDIR /app
-
-# Copy the built application from the previous stage
-COPY --from=BUILD_IMAGE /app .
-
-# Expose the port the app runs on
-EXPOSE 3000
+# Expose port 80 to the outside world
+EXPOSE 80
 
 # Command to run the application
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
